CHANGE deprecated Float and Double constructors.